# taplo

crates/lsp-async-stub/: Cargo.toml
crates/taplo/: Cargo.toml
crates/taplo-cli/: Cargo.toml
crates/taplo-cli/src/: args.rs
crates/taplo-common/: Cargo.toml
crates/taplo-common/src/schema/: mod.rs
crates/taplo-lsp/: Cargo.toml
