[package]
authors = ["tamasfe"]
description = "An LSP server stub for futures"
edition = "2021"
name = "lsp-async-stub"
version = "0.6.0"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1.61"
futures = "0.3.25"
getrandom = { version = "0.2", features = ["wasm-bindgen", "js"] }
lsp-types = { version = "0.93.2" }
rowan = "0.15.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.24.2", default-features = false, optional = true }
tracing = "0.1.37"

[features]
default = []
tokio-stdio = [
  "tokio",
  "tokio/rt",
  "tokio/io-util",
  "tokio/io-std",
  "tokio/macros",
]
tokio-tcp = ["tokio", "tokio/rt", "tokio/io-util", "tokio/net", "tokio/macros"]

[package.metadata.auto-tag]
enabled = true
