[package]
name = "taplo-common"
version = "0.4.0"
edition = "2021"
description = "Shared code for taplo utilities."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.2", features = ["serde"] }
anyhow = { version = "1.0.68", features = ["backtrace"] }
arc-swap = "1.6.0"
async-recursion = "1.0.0"
async-trait = "0.1.61"
atty = "0.2.14"
futures = "0.3.25"
glob = "0.3.1"
globset = "0.4.10"
hex = "0.4.3"
indexmap = { version = "1.9.2", features = ["serde", "rayon"] }
itertools = "0.10.5"
json_value_merge = "1.1.2"
jsonschema = { version = "0.16.1", default-features = false }
lru = "0.9.0"
parking_lot = "0.12.1"
percent-encoding = "2.2.0"
regex = "1.7.1"
reqwest = { version = "0.11.13", default-features = false, features = [
  "json",
] }
schemars = { version = "0.8.11", features = ["url"] }
semver = { version = "1.0.16", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.91", features = ["preserve_order"] }
sha-1 = "0.10.1"
tap = "1.0.1"
taplo = { version = "0.12.0", path = "../taplo", features = ["schema"] }
thiserror = "1.0.38"
time = { version = "0.3.17", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
url = { version = "2.3.1", features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.24.2", features = [
  "sync",
  "fs",
  "time",
  "io-std",
  "parking_lot",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.24.2", features = [
  "sync",
  "parking_lot",
  "io-util",
], default-features = false }

[features]
# default-tls enables native-tls but without enabling native-tls specific features.
native-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[package.metadata.auto-tag]
enabled = true
