[package]
authors = ["tamasf97 <tamasf97@outlook.com>"]
description = "Language server for Taplo"
edition = "2021"
name = "taplo-lsp"
version = "0.6.0"
license = "MIT"
homepage = "https://taplo.tamasfe.dev"
repository = "https://github.com/tamasfe/taplo"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["rustls-tls"]
native-tls = ["taplo-common/native-tls"]
rustls-tls = ["taplo-common/rustls-tls"]

[dependencies]
anyhow = "1"
arc-swap = "1.6.0"
either = "1.8.0"
figment = { version = "0.10.8", features = ["json"] }
futures = "0.3.25"
indexmap = { version = "1.9", features = ["serde"] }
itertools = "0.10.5"
lsp-async-stub = { version = "0.6.0", path = "../lsp-async-stub" }
lsp-types = { version = "0.93.2", features = ["proposed"] }
once_cell = "1.17"
parking_lot = "0.12.1"
regex = "1.7.1"
reqwest = { version = "0.11.13", default-features = false, features = [
  "json",
] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tap = "1.0.1"
taplo = { version = "0.12.0", path = "../taplo", features = ["serde"] }
taplo-common = { version = "0.4.0", path = "../taplo-common" }
time = { version = "0.3", features = ["formatting", "parsing"] }
toml = "0.5"
tracing = "0.1.37"

[package.metadata.auto-tag]
enabled = true
