[package]
authors = ["tamasfe"]
categories = ["parser-implementations", "parsing"]
description = "A TOML parser, analyzer and formatter library"
edition = "2021"
homepage = "https://taplo.tamasfe.dev"
keywords = ["toml", "parser", "formatter", "linter"]
license = "MIT"
name = "taplo"
readme = false
repository = "https://github.com/tamasfe/taplo"
version = "0.12.0"

[features]
default = ["serde"]
schema = ["schemars"]

[dependencies]
ahash = "0.8.2"
arc-swap = "1.6.0"
either = "1.8.0"
globset = { version = "0.4.10" }
itertools = "0.10.5"
logos = "0.12.1"
once_cell = "1.17.0"
rowan = "0.15.10"
serde_json = "1.0.91"
thiserror = "1.0.38"
time = { version = "0.3.17", features = ["parsing", "formatting", "macros"] }
tracing = "0.1.37"

schemars = { version = "0.8.11", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
assert-json-diff = "2"
criterion = "0.4"
difference = "2.0.0"
pprof = { version = "0.11.0", features = ["flamegraph", "criterion"] }
serde_json = "1"
toml = "0.5"

[package.metadata.docs.rs]
features = ["serde", "schema"]

[package.metadata.auto-tag]
enabled = true

[[bench]]
name = "taplo"
harness = false

[[bench]]
name = "profile"
harness = false
